* gnatdll.adb: Minor reformatting throughout. Many ??? added for 	undocumented declarations.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46663 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-30  Robert Dewar <dewar@gnat.com>
+
+	* gnatdll.adb: Minor reformatting throughout. Many ??? added for 
+	undocumented declarations.
+
 2001-10-30  Pascal Obry <obry@gnat.com>
 
 	* gnatdll.adb (Parse_Command_Line): handle -g option to be passed 
