* a-reatim.ads: Minor reformatting
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46664 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,5 +1,9 @@
 2001-10-30  Robert Dewar <dewar@gnat.com>
 
+	* a-reatim.ads: Minor reformatting
+
+2001-10-30  Robert Dewar <dewar@gnat.com>
+
 	* gnatdll.adb: Minor reformatting throughout. Many ??? added for 
 	undocumented declarations.
 
