* (Associated_Node, Set_Associated_Node): Do not check for 	Freeze_Entity.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46666 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,8 @@
+2001-10-30  Geert Bosch <bosch@gnat.com>
+
+	* (Associated_Node, Set_Associated_Node): Do not check for 
+	Freeze_Entity.
+
 2001-10-30  Robert Dewar <dewar@gnat.com>
 
 	* a-reatim.ads: Minor reformatting
