* style.adb: 	(Check_Identifier): Rewrite circuit to be compatible with use of letters 	in the upper half of ASCII. 	(Check_Identifier): Minor reformatting
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46667 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ada/ChangeLog
+++ b/gcc/ada/ChangeLog
@@ -1,3 +1,10 @@
+2001-10-30  Robert Dewar <dewar@gnat.com>
+
+	* style.adb:
+	(Check_Identifier): Rewrite circuit to be compatible with use of letters
+	in the upper half of ASCII.
+	(Check_Identifier): Minor reformatting
+
 2001-10-30  Geert Bosch <bosch@gnat.com>
 
 	* (Associated_Node, Set_Associated_Node): Do not check for 
