--- a/gcc/config/h8300/h8300.md
+++ b/gcc/config/h8300/h8300.md
@@ -2355,3 +2355,26 @@
   "xor\\t%X1,%s0"
   [(set_attr "cc" "clobber")
    (set_attr "length" "2")])
+
+(define_insn ""
+  [(set (match_operand:HI 0 "register_operand" "=r")
+        (ior:HI
+           (zero_extend:HI (match_operand:QI 1 "register_operand" "0"))
+           (ashift:HI (match_operand:HI 2 "register_operand" "r")
+                      (const_int 8))))]
+  "REGNO (operands[0]) != REGNO (operands[2])"
+  "mov.b\\t%s2,%t0"
+  [(set_attr "cc" "clobber")
+   (set_attr "length" "2")])
+
+(define_insn ""
+  [(set (match_operand:SI 0 "register_operand" "=r")
+        (ior:SI
+           (zero_extend:SI (match_operand:HI 1 "register_operand" "0"))
+           (ashift:SI (match_operand:SI 2 "register_operand" "r")
+                      (const_int 16))))]
+  "(TARGET_H8300H || TARGET_H8300S)
+    && (REGNO (operands[0]) != REGNO (operands[2]))"
+  "mov.w\\t%f2,%e0"
+  [(set_attr "cc" "clobber")
+   (set_attr "length" "2")])
