--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-11-01  Kazu Hirata  <kazu@hxi.com>
 
+	* config/h8300/h8300.c (h8300_encode_label): Compute a string
+	before passing it to ggc_alloc_string.
+
+2001-11-01  Kazu Hirata  <kazu@hxi.com>
+
 	* config/m68k/3b1.h: Fix comment formatting.
 	* config/m68k/3b1g.h: Likewise.
 	* config/m68k/a-ux.h: Likewise.
