* doc/install.texi (Specific, sparc-sun-solaris2*): Bring 	64-bit Sparc description more in line with reality.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46704 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,8 @@
+2001-11-01  David S. Miller  <davem@redhat.com>
+
+	* doc/install.texi (Specific, sparc-sun-solaris2*): Bring
+	64-bit Sparc description more in line with reality.
+
 2001-11-01  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* Makefile.in (GCOV_OBJS): Add version.o.
