--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-11-01  Kazu Hirata  <kazu@hxi.com>
+
+	* config/m68hc11/m68hc11.c: Fix comment formatting.
+	* config/m68hc11/m68hc11.h: Likewise.
+	* config/m68hc11/m68hc11.md: Likewise.
+
 2001-11-01  Neil Booth  <neil@daikokuya.demon.co.uk>
 
 	* c-typeck.c (default_conversion): Retain the original expression
