* libjava.lang/TLtest.xfail: New file. Needs threads.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46710 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-02  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* libjava.lang/TLtest.xfail: New file. Needs threads.
+
 2001-10-04  Alexandre Petit-Bianco  <apbianco@redhat.com>
 
 	* libjava.lang/PR3096.java: New file.
