* recog.c (decode_asm_operands):  Check that the SRC is ASM_OPERANDS.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46713 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-02  Graham Stott  <grahams@redhat.com>
+
+	* recog.c (decode_asm_operands):  Check that the SRC is ASM_OPERANDS.
+
 2001-11-01  Eric Christopher  <echristo@redhat.com>
 
         * config.gcc: Revert part of earlier patch.
