* g++.dg/other/debug1.C: Fix typos.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46714 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-02  Graham Stott  <grahams@redhat.com>
+
+	* g++.dgother/debug1.C: Fix typos.
+
 2001-11-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* g++.dg/other/debug1.C: New test.
