* pt.c (unify): Handle SCOPE_REF.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@46715 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/cp/ChangeLog
+++ b/gcc/cp/ChangeLog
@@ -1,3 +1,7 @@
+2001-11-02  Kriang Lerdsuwanakij  <lerdsuwa@users.sourceforge.net>
+
+	* pt.c (unify): Handle SCOPE_REF.
+
 2001-11-01  Jakub Jelinek  <jakub@redhat.com>
 
 	* tree.c (cp_copy_res_decl_for_inlining): Adjust
